# TeamBoaOHTU2021

./: .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  app.py  articles.py  blogs.py  books.py  pyproject.toml  routes.py  schema.sql  tasks.py  user.py  videos.py
.github/workflows/: main.yml
documents/: Coverage_report.html  db_man.md
documents/htmlcov/: app_py.html  articles_py.html  blogs_py.html  books_py.html  d_145eef247bfb46b6_app_py.html  d_145eef247bfb46b6_articles_py.html  d_145eef247bfb46b6_blogs_py.html  d_145eef247bfb46b6_books_py.html  d_145eef247bfb46b6_db_py.html  d_145eef247bfb46b6_routes_py.html  d_145eef247bfb46b6_user_py.html  d_145eef247bfb46b6_videos_py.html  d_a44f0ac069e85531___init___py.html  d_a44f0ac069e85531_article_test_py.html  d_a44f0ac069e85531_blog_test_py.html  d_a44f0ac069e85531_book_test_py.html  d_a44f0ac069e85531_user_test_py.html  d_a44f0ac069e85531_video_test_py.html  index.html  routes_py.html  status.json  user_py.html  videos_py.html
src/: app.py  articles.py  blogs.py  books.py  routes.py  user.py  videos.py
src/templates/: browse.html  edit_item.html  index.html  layout.html  login.html  new.html  new_article.html  new_blog.html  new_book.html  new_choose_type.html  new_video.html  newarticle.html
src/tests/: adding.robot  article_test.py  (+9 more)
templates/: browse.html  index.html  login.html  new_article.html  new_blog.html  new_book.html  new_choose_type.html  register.html
tests/: adding.robot  article_test.py  blog_test.py  book_test.py  browsing.robot  resource.robot  user.robot  user_test.py  video_test.py
(+2 files in other folders)
