[tool.poetry]
name = "teamboaohtu2021"
version = "0.1.0"
description = ""
authors = ["Mikkel Leskelä <mikkel.leskela@mail.com>"]

[tool.poetry.dependencies]
python = "3.8.12"
Flask = "^2.0.2"
Flask-SQLAlchemy = "^2.5.1"
psycopg2 = "^2.9.2"
gunicorn = "^20.1.0"
python-dotenv = "^0.19.2"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.1.2"
pylint = "^2.12.1"
robotframework = "^4.1.2"
robotframework-seleniumlibrary = "^5.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
